--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,14 +1,20 @@
 name: AndroidSDK_Branch_CI
+
 on: [push]
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build_and_test:
     runs-on: macOS-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: set up JDK 1.8
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
-          java-version: 1.8
+          distribution: 'temurin'
+          java-version: '8'
       - name: Install git-crypt
         run: |
           brew install gnupg
@@ -21,16 +27,10 @@ jobs:
 
       - name: Import GPG key
         id: import_gpg
-        uses: crazy-max/ghaction-import-gpg@v4
+        uses: crazy-max/ghaction-import-gpg@v5
         with:
           gpg_private_key: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}
           passphrase: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
-
-      - name: Test gpg key
-        run: |
-          touch test.txt
-          gpg -ab test.txt
-          gpg --verify test.txt.asc
 
       - name: Restore setting values to gradle.properties
         env:
@@ -49,16 +49,25 @@ jobs:
           echo "ossrhUsername=$MAVEN_USERNAME" >> ./gradle.properties
           echo "ossrhPassword=$MAVEN_PASSWORD" >> ./gradle.properties
           cat ./gradle.properties
-
+      - run: |
+          rm -r docs/
+          mkdir docs
       - name: build and test Android SDK
         run: ./gradlew build test --continue --info
-
       - name: makeJar
         run: |
-           ./gradlew clean makeJar
-           ls ./release/NCMB.jar
+          ./gradlew clean makeJar
       - name: upload NCMB.jar
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: NCMB.jar
           path: ./release/NCMB.jar
+      - run: mv build/docs/javadoc/* docs/
+      - name: zip docs
+        run: zip -r docs.zip docs/
+      - name: Archive docs
+        uses: actions/upload-artifact@v3
+        with:
+          name: docs
+          path: docs.zip
+      
