--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,20 @@ local.properties
 .idea/libraries
 .idea/gradle.xml
 .idea/misc.xml
-.idea/workspace.xml 
+.idea/workspace.xml
+.idea/modules.xml
+.idea/runConfigurations.xml
+.idea/vcs.xml
+.idea/.gitignore
+.idea/compiler.xml
+.idea/jarRepositories.xml
 
 # others
 .DS_Store
 proguard-rules.pro
+docs.zip
+test.txt
+test.txt.asc
 
 # テスト設定が消えるため指定しない
 # .idea/workspace.xml
