--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,31 @@ android.enableJetifier=true
 android.useAndroidX=true
 JAR_NAME=NCMB.jar
 
+signing.gnupg.executable=gpg
+signing.gnupg.useLegacyGpg=true
+signing.gnupg.homeDir=/Users/runner/.gnupg
+signing.gnupg.keyId=E62E12E5
+signing.gnupg.password=66fpn6hq
+ossrhUsername=ncmbsdk
+ossrhPassword=66fpn6hq&SDK
+signing.gnupg.executable=gpg
+signing.gnupg.useLegacyGpg=true
+signing.gnupg.homeDir=/Users/runner/.gnupg
+signing.gnupg.keyId=E62E12E5
+signing.gnupg.password=66fpn6hq
+ossrhUsername=ncmbsdk
+ossrhPassword=66fpn6hq&SDK
+signing.gnupg.executable=gpg
+signing.gnupg.useLegacyGpg=true
+signing.gnupg.homeDir=/Users/runner/.gnupg
+signing.gnupg.keyId=E62E12E5
+signing.gnupg.password=66fpn6hq
+ossrhUsername=ncmbsdk
+ossrhPassword=66fpn6hq&SDK
+signing.gnupg.executable=gpg
+signing.gnupg.useLegacyGpg=true
+signing.gnupg.homeDir=/Users/runner/.gnupg
+signing.gnupg.keyId=E62E12E5
+signing.gnupg.password=66fpn6hq
+ossrhUsername=ncmbsdk
+ossrhPassword=66fpn6hq&SDK
