--- a/gradle.properties
+++ b/gradle.properties
@@ -30,3 +30,4 @@ signing.gnupg.keyId=E62E12E5
 signing.gnupg.password=66fpn6hq
 ossrhUsername=ncmbsdk
 ossrhPassword=66fpn6hq&SDK
+android.jetifier.ignorelist = bcprov, shadow
