--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:4.2.2'
     }
 }
 
@@ -22,11 +22,12 @@ allprojects {
     }
 }
 android {
-    compileSdkVersion 29
-    buildToolsVersion '29.0.2'
+    compileSdkVersion 30
+    buildToolsVersion '30.0.2'
+    testOptions.unitTests.includeAndroidResources = true
 
     defaultConfig {
-        minSdkVersion 14
+        minSdkVersion 16
         versionCode 1
         versionName "1.0"
     }
@@ -63,9 +64,10 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation "androidx.annotation:annotation:1.0.0"
 
+    androidTestImplementation "androidx.test:core:1.5.0"
     testImplementation 'junit:junit:4.12'
-    testImplementation "org.robolectric:robolectric:3.0"
-    testImplementation 'org.robolectric:shadows-httpclient:3.0'
+    testImplementation "org.robolectric:robolectric:4.9.2"
+    testImplementation 'org.robolectric:shadows-httpclient:4.9.2'
     testImplementation 'com.squareup.okhttp:mockwebserver:2.3.0'
     testImplementation 'org.mockito:mockito-core:1.10.19'
     testImplementation 'org.powermock:powermock-api-mockito:1.6.5'
@@ -75,7 +77,7 @@ dependencies {
     testImplementation 'org.yaml:snakeyaml:1.15'
     testImplementation 'org.skyscreamer:jsonassert:1.2.3'
     testImplementation "org.robolectric:shadows-play-services:3.0"
-    testImplementation "org.robolectric:shadows-support-v4:3.0"
+    testImplementation "org.robolectric:shadows-support-v4:3.3.2"
 
 }
 
